# normal-paths

./: Cargo.toml
src/: lib.rs
